# rust-tdlib

./: .gitignore  Cargo.toml  Makefile  README.md  a.json  build.rs  sync_w2.sh
doc/: a.json  aa.json  b.json  c.json  last_msg.json  updateUnreadMessageCount.json  update_new_messager.json
examples/: main.rs
src/: a.json  errors.rs  tdjson.rs  update.txt  utils.rs  wrapper.rs
src/client/: api.rs  auth_handler.rs  client.rs  mod.rs  observer.rs  tdlib_client.rs  worker.rs
src/types/: _common.rs  a_test.rs  add_chat_member.rs  add_chat_members.rs  add_file_to_downloads.rs  add_proxy.rs  add_sticker_to_set.rs  added_proxy.rs  alternative_video.rs  animated_emoji.rs  authentication_code_type.rs  authorization_state.rs  auto_download_settings.rs  background_fill.rs  basic_group.rs  basic_group_full_info.rs  cancel_upload_file.rs  chat_action.rs  chat_event.rs  chat_event_action.rs  chat_invite_link_info.rs  chat_join_requests_info.rs  chat_list.rs  chat_member.rs  chat_member_status.rs  chat_source.rs  chat_statistics_message_sender_info.rs  chat_theme.rs  chat_type.rs  connected_website.rs  create_call.rs  create_forum_topic.rs  create_new_sticker_set.rs  create_private_chat.rs  create_supergroup_chat.rs  delete_chat_messages_from_user.rs  delete_supergroup.rs  edit_message_schedule.rs  forum_topic.rs  forward_messages.rs  (+79 more)
